Fixed overflowing announcements and prevented navbar height issue on first page load (worked fine on consecutive loads).

--- a/_harponica/assets/css/theme.css
+++ b/_harponica/assets/css/theme.css
@@ -40,36 +40,45 @@ body {
 	.navbar-header {
 		float: none;
 	}
-	.navbar-left,.navbar-right {
+	
+	.navbar-left, .navbar-right {
 		float: none !important;
 	}
+
 	.navbar-toggle {
 		display: block;
 	}
+
 	.navbar-collapse {
 		border-top: 1px solid transparent;
 		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 	}
+
 	.navbar-fixed-top {
 		top: 0;
 		border-width: 0 0 1px;
 	}
+
 	.navbar-collapse.collapse {
 		display: none!important;
 	}
+
 	.navbar-nav {
 		float: none!important;
 		margin-top: 7.5px;
 	}
-	.navbar-nav>li {
+
+	.navbar-nav > li {
 		float: none;
 	}
-	.navbar-nav>li>a {
+
+	.navbar-nav > li > a {
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
-	.collapse.in{
-		display:block !important;
+
+	.collapse.in {
+		display: block !important;
 	}
 }
 
@@ -120,19 +129,28 @@ body {
 
 .announcements {
 	width: 100%;
+	height: 4rem;
 	background-color: #e51c23;
 	padding: .6em;
 	font-family: inherit;
 	font-weight: 100;
+	text-align: center;
 }
 
 .announcements p {
-	font-size: 14px;
+	height: 100%;
 	margin: 0em;
+	padding-right: 2.5%;
+	padding-left: 2.5%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	font-size: 14px;
+	cursor: pointer;
 }
 
 .btn-nav {
-	float: right;
+	float: right !important;
 	margin: .1em .1em;
 }
 
